--- a/my-app/src/style/contents.css
+++ b/my-app/src/style/contents.css
@@ -1,3 +1,4 @@
+
 .introducao{
     max-width: 1600px;
     margin: 0 auto;
@@ -6,10 +7,18 @@
     grid-template-columns: 1fr 2fr;
     gap: 5rem;
     align-items: center;
+}  
+.experiencia{
+    max-width: 1600px;
+    margin: 0 auto;
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 5rem;
 }
 
 .introducao h1{
-    font-size: 5.5rem;
+    font-size: 4.5rem;
     line-height: 1.125;
     margin-bottom: 1rem;
     position: relative;
@@ -62,3 +71,88 @@ img{
         left: 0px;
     }
 }
+
+.subtitulo{
+    font-size: 12rem;
+    word-break: break-all;
+    line-height: 1;
+    text-transform: uppercase;
+    max-width: 4ch;
+    color: #e0e0e0;
+}
+
+.experiencia-texto{
+    font-size: 2rem;
+    line-height: 1.4;
+    max-width: 50ch;
+    margin-bottom: 2rem;
+}
+
+.experiencia-texto strong{
+    color: #141414;
+}
+
+.empresa{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2px 20px;
+    padding: 1rem;
+    background-color: #f5f5f5;
+    margin-bottom: 1rem;
+    border-radius: 1rem;
+    position: relative;
+    align-items: center;
+}
+
+.experiencia .subtitulo {
+    color: #e0e0e0;
+  }
+
+.empresa::before{
+    content: "";
+    display: block;
+    width: 5px;
+    height: 25px;
+    background:linear-gradient(#b6f829, #67dd0a );
+    position: absolute;
+    top: 32px;
+    left: -5px;
+}
+
+.empresa-ano{
+    position: absolute;
+    top: 33px;
+    left: -80px;
+    color: #525252;
+    font-size: 1rem;
+}
+
+.empresa-texto{
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #525252;
+}
+
+.empresa-habilidades{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-left: -35px;
+    align-content: flex-start;
+
+}
+.empresa-habilidades li{
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 1rem;
+    background: #ffff;
+    padding: 5px 10px;
+    
+
+}
+.empresa-titulo {
+    font-size: 1.125rem;
+    line-height: 1.1;
+    font-weight: bold;
+  }
+
