--- a/my-app/src/style/header.css
+++ b/my-app/src/style/header.css
@@ -29,16 +29,26 @@
 
 @media(max-width: 800px){
     .header{
-        flex-direction:row;
         gap: 1rem;
         padding: 1rem;
+        flex-direction: column;
+        
 
+    }
+    .header img{
+        display: inline-block;
+        
     }
 
     .header-menu a{
         background-color: #f5f5f5;
         border-radius: 1rem;
-        font-size: 1rem;
+        font-size: 1.5rem;
+    
+    }
+     ul{
+        margin: 0px 0px;
+        padding: 0px;
     }
     
 
