--- a/my-app/src/style/contents.css
+++ b/my-app/src/style/contents.css
@@ -73,14 +73,16 @@ img{
    
     .experiencia{
         grid-template-columns: 1fr;
+        padding: 1rem;
         
     }
     .experiencia .subtitulo{
         display: none;
     }
-    .empresa-ano{
-        display: none;
-        
+  
+
+    .empresa-habilidades{
+        padding-left: 2rem;
     }
 
 }
