--- a/my-app/src/style/contents.css
+++ b/my-app/src/style/contents.css
@@ -171,3 +171,27 @@ img{
     font-weight: bold;
   }
 
+  .subtitulo-black{
+    font-size: 12rem;
+    word-break: break-all;
+    line-height: 1;
+    text-transform: uppercase;
+    max-width: 4ch;
+    color: #000;
+
+}
+
+.formacao{
+    background: #141414;
+    color: #ffffff;
+}
+
+.formacao-container{
+    max-width: 1600px;
+    margin: 0 auto;
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 5rem;
+    
+}
