--- a/my-app/src/style/contents.css
+++ b/my-app/src/style/contents.css
@@ -195,3 +195,57 @@ img{
     gap: 5rem;
     
 }
+
+.formacao-texto{
+    font-size: 2rem;
+    line-height: 1.4;
+    max-width: 51ch;
+    margin-bottom: 2rem;
+    color: #a3a3a3;
+}
+
+.formacao-texto strong{
+    color: #ffffff;
+}
+
+.faculdade-lista{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3rem;
+    padding: 0px;
+    margin-bottom: 4rem;
+}
+
+.faculdade{
+    flex:1;
+    background: #000000;
+    padding: 1rem;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.faculdade-tipo{
+    font-size: 1rem;
+    text-transform: uppercase;
+    color:#a3a3a3;
+    margin-bottom: 0.5rem;
+}
+
+.faculdade-curso{
+    font-size: 1.2rem;
+    line-height: 1.4;
+    margin-bottom: 2rem;
+    position: relative;
+}
+
+.faculdade-curso::before{
+    content: "";
+    display: block;
+    width: 5px;
+    height: 25px;
+    background:linear-gradient(#b6f829, #67dd0a );
+    position: absolute;
+
+    left: -22px;
+}
