--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,5 +1,6 @@
 @import url(./style/header.css);
 @import url(./style/contents.css);
+@import url(./style/footer.css);
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Rubik&display=swap');
 
 * {
